--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "Hana-ame.github.io"]
 	path = Hana-ame.github.io
 	url = git@github.com:Hana-ame/Hana-ame.github.io.git
+[submodule "src/Tools"]
+	path = src/Tools
+	url = git@github.com:Hana-ame/Tools.git
+	branch = js
