--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "@types/node": "^22.9.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "jsrsasign": "^11.1.0",
+    "jsrsasign-util": "^1.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
+    "react-native-rsa-native": "^2.0.5",
+    "react-native-web": "^0.19.13",
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
     "remark-gfm": "^4.0.0",
