--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,7 @@
 	path = src/Tools
 	url = git@github.com:Hana-ame/Tools.git
 	branch = js
+[submodule "Hana-ame"]
+	path = Hana-ame
+	url = git@github.com:Hana-ame/Hana-ame.git
+	branch = notes
