--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@types/react-dom": "^18.3.1",
     "jsrsasign": "^11.1.0",
     "jsrsasign-util": "^1.0.5",
+    "mathjax": "^3.2.2",
+    "mathjax3-react": "^1.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.3",
