--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-helmet": "^6.1.0",
+    "react-markdown": "^10.1.0",
     "react-router": "^7.5.3",
+    "rehype-highlight": "^7.0.2",
+    "remark-gfm": "^4.0.1",
     "tailwind-scrollbar-hide": "^2.0.0",
     "tailwindcss": "^4.1.5"
   },
