--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -2,17 +2,17 @@
   "compilerOptions": {
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
     "target": "ES2022",
-    "lib": ["ES2023"],
+    "lib": [
+      "ES2023"
+    ],
     "module": "ESNext",
     "skipLibCheck": true,
-
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "verbatimModuleSyntax": true,
     "moduleDetection": "force",
     "noEmit": true,
-
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
@@ -20,10 +20,15 @@
     "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true,
-
-    "jsx": "preserve",  // 保留 JSX 供 Babel 处理
-    "allowJs": true,    // 允许引入 JS/JSX 文件
+    "jsx": "preserve", // 保留 JSX 供 Babel 处理
+    "allowJs": true, // 允许引入 JS/JSX 文件
     "esModuleInterop": true
   },
-  "include": ["vite.config.ts" ,"**/*.tsx", "**/*.jsx"] 
+  "include": [
+    "vite.config.ts",
+    "**/*.tsx",
+    "**/*.jsx",
+    "**/*.css",
+    "src/**/*"
+  ]
 }
