--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^2.8.1",
     "@tailwindcss/postcss": "^4.1.6",
     "@tailwindcss/vite": "^4.1.5",
+    "clsx": "^2.1.1",
     "gsap": "^3.13.0",
     "postcss": "^8.5.3",
     "react": "^19.1.0",
