--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mathjax3-react": "^1.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-markdown": "^9.0.3",
     "react-native-rsa-native": "^2.0.5",
     "react-native-web": "^0.19.13",
