--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -14,6 +15,7 @@
     "mathjax3-react": "^1.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-draggable": "^4.4.6",
     "react-icons": "^5.5.0",
     "react-markdown": "^9.0.3",
     "react-native-rsa-native": "^2.0.5",
@@ -21,6 +23,7 @@
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
     "remark-gfm": "^4.0.0",
+    "three": "^0.176.0",
     "typescript": "^5.6.3",
     "web-vitals": "^2.1.4"
   },
@@ -52,6 +55,7 @@
     "@types/jest": "^29.5.14",
     "@types/mocha": "^10.0.9",
     "@types/node": "^22.9.0",
+    "@types/three": "^0.176.0",
     "autoprefixer": "^10.4.20",
     "babel-plugin-module-resolver": "^5.0.2",
     "postcss": "^8.4.49",
