--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jsrsasign-util": "^1.0.5",
     "mathjax": "^3.2.2",
     "mathjax3-react": "^1.2.0",
+    "phaser": "^3.88.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-draggable": "^4.4.6",
