--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "hls.js": "^1.6.12",
     "jsrsasign": "^11.1.0",
     "jsrsasign-util": "^1.0.5",
     "mathjax": "^3.2.2",
@@ -17,15 +18,18 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-draggable": "^4.4.6",
+    "react-hls-player": "^3.0.7",
     "react-icons": "^5.5.0",
     "react-markdown": "^9.0.3",
     "react-native-rsa-native": "^2.0.5",
     "react-native-web": "^0.19.13",
+    "react-player": "^3.3.2",
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
     "remark-gfm": "^4.0.0",
     "three": "^0.176.0",
     "typescript": "^5.6.3",
+    "video.js": "^8.23.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
