--- a/package.json
+++ b/package.json
@@ -20,13 +20,14 @@
     "react-draggable": "^4.4.6",
     "react-hls-player": "^3.0.7",
     "react-icons": "^5.5.0",
-    "react-markdown": "^9.0.3",
+    "react-markdown": "^9.1.0",
     "react-native-rsa-native": "^2.0.5",
     "react-native-web": "^0.19.13",
     "react-player": "^3.3.2",
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
-    "remark-gfm": "^4.0.0",
+    "react-syntax-highlighter": "^16.0.0",
+    "remark-gfm": "^4.0.1",
     "three": "^0.176.0",
     "typescript": "^5.6.3",
     "video.js": "^8.23.4",
