--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
     "react-syntax-highlighter": "^16.0.0",
+    "remark-breaks": "^4.0.0",
     "remark-gfm": "^4.0.1",
     "three": "^0.176.0",
     "typescript": "^5.6.3",
