--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-markdown": "^9.1.0",
     "react-native-rsa-native": "^2.0.5",
     "react-native-web": "^0.19.13",
+    "react-photo-view": "^1.2.7",
     "react-player": "^3.3.2",
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
